{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 69,
  "lineage": "8f69ce25-f85c-d76b-a12f-12326f7f14f2",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/aaa-alb/1190c1d1613ee0c0",
            "arn_suffix": "app/aaa-alb/1190c1d1613ee0c0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "aaa-alb-458068994.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/aaa-alb/1190c1d1613ee0c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aaa-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0436502b92f466361"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f1a2043833afb74"
              },
              {
                "subnet_id": "subnet-0fbce34bdde54e4e1"
              }
            ],
            "subnets": [
              "subnet-00f1a2043833afb74",
              "subnet-0fbce34bdde54e4e1"
            ],
            "vpc_id": "vpc-01a2fe3f404b78b24",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.alb.module.global_network.data.aws_subnets.public",
            "module.alb.module.global_network.data.aws_subnets.public2",
            "module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:listener/app/aaa-alb/1190c1d1613ee0c0/d1d3792acb629fe6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:targetgroup/aaa-lb-tg/732babda2e1ee955",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:listener/app/aaa-alb/1190c1d1613ee0c0/d1d3792acb629fe6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:loadbalancer/app/aaa-alb/1190c1d1613ee0c0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.alb_sg",
            "module.alb.module.global_network.data.aws_subnets.public",
            "module.alb.module.global_network.data.aws_subnets.public2",
            "module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:targetgroup/aaa-lb-tg/732babda2e1ee955",
            "arn_suffix": "targetgroup/aaa-lb-tg/732babda2e1ee955",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:241875560804:targetgroup/aaa-lb-tg/732babda2e1ee955",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aaa-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a2fe3f404b78b24"
          },
          "dependencies": [
            "module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-0436502b92f466361",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0436502b92f466361",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241006075133614100000001",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a2fe3f404b78b24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.global_network.data.aws_vpcs.main",
            "module.global_bootstrap.module.ecs.aws_ecs_cluster.new_cluster",
            "module.global_bootstrap.module.ecs.aws_iam_role.ecs_task_execution",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_cloudwatch_policy",
            "module.global_bootstrap.module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_policy",
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_route_table_association.public",
            "module.global_bootstrap.module.network.aws_route_table_association.public2",
            "module.global_bootstrap.module.network.aws_subnet.private",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:internet-gateway/igw-0eb4d2ac38f16d511",
            "id": "igw-0eb4d2ac38f16d511",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-igw"
            },
            "tags_all": {
              "Name": "todolist-igw"
            },
            "vpc_id": "vpc-01a2fe3f404b78b24"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-01cef7210e4fc8c92",
            "id": "rtb-01cef7210e4fc8c92",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb4d2ac38f16d511",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todolist-public-route-table"
            },
            "tags_all": {
              "Name": "todolist-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a2fe3f404b78b24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e99c84bf8236fe04",
            "route_table_id": "rtb-01cef7210e4fc8c92",
            "subnet_id": "subnet-00f1a2043833afb74"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_subnet.public",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005aa781a87f6a57d",
            "route_table_id": "rtb-01cef7210e4fc8c92",
            "subnet_id": "subnet-0fbce34bdde54e4e1"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_internet_gateway.main",
            "module.global_bootstrap.module.network.aws_route_table.public_rt",
            "module.global_bootstrap.module.network.aws_subnet.public2",
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0dec731e57946221b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dec731e57946221b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-private-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-private-an1a-subnet"
            },
            "vpc_id": "vpc-01a2fe3f404b78b24"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-00f1a2043833afb74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f1a2043833afb74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-public-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-public-an1a-subnet"
            },
            "vpc_id": "vpc-01a2fe3f404b78b24"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0fbce34bdde54e4e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbce34bdde54e4e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-public-an1c-subnet"
            },
            "tags_all": {
              "Name": "todolist-public-an1c-subnet"
            },
            "vpc_id": "vpc-01a2fe3f404b78b24"
          },
          "dependencies": [
            "module.global_bootstrap.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.global_bootstrap.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-01a2fe3f404b78b24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a8fbbada0acc879",
            "default_route_table_id": "rtb-0c5fac5526cdbb6e7",
            "default_security_group_id": "sg-05ffbc67685111cf7",
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a2fe3f404b78b24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5fac5526cdbb6e7",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            },
            "tags_all": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    }
  ]
}